[gd_scene load_steps=3 format=3 uid="uid://cb2wlrdat1kn2"]

[ext_resource type="Script" path="res://Scences/MainMenu/main_menu.gd" id="1_4aq27"]
[ext_resource type="PackedScene" uid="uid://cni1c8l0tjd4q" path="res://Objects/Lobby/lobby.tscn" id="2_8wqy5"]

[node name="MainMenuButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4aq27")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -50.5
offset_right = 23.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "192.168.0.99"
placeholder_text = "IP"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Lobby" parent="." instance=ExtResource("2_8wqy5")]
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
